updated for todays open house

--- a/running/index.html
+++ b/running/index.html
@@ -70,8 +70,8 @@ d3.tsv("running.tsv", function(error, data) {
 
   var options = ["Distance","Elevation Gain","Avg HR","Max HR"];
 
-  // x.domain(dateOrder);
-  x.domain(d3.set(data.map(function(d) { return d["Day of Week"]; })).values().sort(function(a,b) { return dateOrder.indexOf(a) - dateOrder.indexOf(b); }));
+  x.domain(dateOrder);
+  // x.domain(d3.set(data.map(function(d) { return d["Day of Week"]; })).values().sort(function(a,b) { return dateOrder.indexOf(a) - dateOrder.indexOf(b); }));
   
   y.domain(d3.extent(nestedData.map(function(d) { return d.value["Number of Runs"] }))).nice();
 
@@ -91,103 +91,108 @@ d3.tsv("running.tsv", function(error, data) {
         .range(["white", "steelblue"])
         .domain(d3.extent(nestedData.map(function(d) { return d.value["Elevation Gain"] })))
 
+  var heartRateWidth = d3.scaleLinear()
+        .range([5, 25])
+        .domain(d3.extent(nestedData.map(function(d) { return d.value["Avg HR"] })))
+
   svg.selectAll(".bar")
       .data(nestedData)
     .enter().append("rect")
       .attr("class",function(d) { return "bar " + d.value["Day of Week"]; })
       .attr("width", x.bandwidth())
+      // .attr("width", function(d) { return heartRateWidth(d.value["Avg HR"])})
       .attr("height", function(d) { return height - y(d.value["Number of Runs"]); })
       .attr("x", function(d) { return x(d.key); })
       .attr("y", function(d) { return y(d.value["Number of Runs"]); })
 
       // Adjusting by color 
-      // .style("stroke", "#000")
+      .style("stroke", "#000")
       // .style("fill", "steelblue")
       // .style("fill", function(d) { return elevationColor(d.value["Elevation Gain"]); })
       // .style("fill", function(d) { return color(d.key); })
 
       // Adding interactions
-      // .on("mouseenter", function(d) { 
+      .on("mouseenter", function(d) { 
 
-      //   d3.select("#mouseover")
-      //   .text(d.key + ": " + 
-      //     d.value["Number of Runs"] + " runs, " + 
-      //     numberFormat(d.value["Distance"]) + " miles ran, " + 
-      //     numberFormat(d.value["Elevation Gain"]) + " total elevation gain, and an average BPM of" + 
-      //     numberFormat(d.value["Avg HR"])
-      //     )
+        d3.select("#mouseover")
+        .text(d.key + ": " + 
+          d.value["Number of Runs"] + " runs, " + 
+          numberFormat(d.value["Distance"]) + " miles ran, " + 
+          numberFormat(d.value["Elevation Gain"]) + " total elevation gain, and an average BPM of" + 
+          numberFormat(d.value["Avg HR"])
+          )
 
-      // })
-      // .on("mouseleave", function(d) { 
+      })
+      .on("mouseleave", function(d) { 
 
-      //   d3.select("#mouseover")
-      //   .text("");
+        d3.select("#mouseover")
+        .text("");
 
-      // })
+      })
 
 
   // Add Labels
-  // svg.selectAll(".bar-text")
-  //     .data(nestedData)
-  //   .enter().append("text")
-  //     .attr("class",function(d) { return "bar-text " + d.value["Day of Week"]; })
-  //     .attr("x", function(d) { return x(d.key); })
-  //     .attr("y", function(d) { return y(d.value["Number of Runs"]); })
-  //     .attr("dy", -2)
-  //     .text(function(d) { return numberFormat(d.value["Number of Runs"])})
+  svg.selectAll(".bar-text")
+      .data(nestedData)
+    .enter().append("text")
+      .attr("class",function(d) { return "bar-text " + d.value["Day of Week"]; })
+      .attr("x", function(d) { return x(d.key); })
+      .attr("y", function(d) { return y(d.value["Number of Runs"]); })
+      .attr("dy", -2)
+      .text(function(d) { return numberFormat(d.value["Number of Runs"])})
 
 
   // Add in other features, like a dropdown for different metrics
-  // var options = ["Number of Runs", "Elevation Gain","Distance","Avg HR","Max HR"];
+  var options = ["Number of Runs", "Elevation Gain","Distance","Avg HR","Max HR"];
   
-  // var dropdown = d3.select("#dropdown")
-  //     .append("select")
-  //     .on("change", change);
+  var dropdown = d3.select("#dropdown")
+      .append("select")
+      .on("change", change);
 
-  // dropdown.selectAll("option")
-  //     .data(options)
-  //   .enter().append("option")
-  //   .text(function(d) { return d; }); 
+  dropdown.selectAll("option")
+      .data(options)
+    .enter().append("option")
+    .text(function(d) { return d; }); 
     
-  // function change() { 
+  function change() { 
 
-  //   var column = this.value,
-  //       text = column + " by Day of Week";
+    var column = this.value,
+        text = column + " by Day of Week";
 
-  //   y.domain(d3.extent(nestedData.map(function(d) { return d.value[column] }))).nice();
+    y.domain(d3.extent(nestedData.map(function(d) { return d.value[column] }))).nice();
 
-  //   d3.select("#title")
-  //     .text(text)
+    d3.select("#title")
+      .text(text)
 
-  //   d3.selectAll(".bar")
-  //     .transition()
-  //     .duration(2000)
-  //     .attr("height", function(d) { return height - y(d.value[column]); })
-  //     .attr("y", function(d) { return y(d.value[column]); });
+    d3.selectAll(".bar")
+      .transition()
+      .duration(2000)
+      .attr("height", function(d) { return height - y(d.value[column]); })
+      .attr("y", function(d) { return y(d.value[column]); });
 
-  // d3.selectAll(".bar-text")
-  //     .transition()
-  //     .duration(2000)
-  //     .attr("y", function(d) { return y(d.value[column]); })
-  //     .attr("dy", -2)   
-  //     .on("start", function repeat(d) {
-  //     d3.active(this)
-  //         .tween("text", function() {
-  //           var that = d3.select(this),
-  //               i = d3.interpolateNumber(that.text().replace(/,/g, ""), d.value[column]);
-  //           return function(t) { that.text(numberFormat(i(t))); };
-  //         })
-  //       .transition()
-  //         .delay(1500)
-  //         .on("start", repeat);
-  //   });
+  d3.selectAll(".bar-text")
+      .transition()
+      .duration(2000)
+      .attr("y", function(d) { return y(d.value[column]); })
+      .attr("dy", -2)   
+      .on("start", function repeat(d) {
+      d3.active(this)
+          .tween("text", function() {
+            var that = d3.select(this),
+                i = d3.interpolateNumber(that.text().replace(/,/g, ""), d.value[column]);
+            return function(t) { that.text(numberFormat(i(t))); };
+          })
+        .transition()
+          .delay(1500)
+          .on("start", repeat);
+    });
 
-  //   d3.select(".y")
-  //     .transition()
-  //     .call(d3.axisLeft(y))
-  //     .select(".label")
-  //     .text(column)
-  // }
+    d3.select(".y")
+      .transition()
+      .call(d3.axisLeft(y))
+      .select(".label")
+      .text(column)
+  }
 
 });
 
